Modification de addProduct